--- a/migration-newip-to-ts/src/index.html
+++ b/migration-newip-to-ts/src/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
-    <title>NewsPortal</title>
+    <title>News Portal</title>
   </head>
   <body class="body">
-    <header>
+    <header class="header">
       <div class="header__wrapper wrapper">
         <h1>News Portal</h1>
         <form class="filter">
-        <label>
-          <input class="filter__input" type="text" placeholder="Search" minlength="2">
-        </label>
-        <button class="filter__button" type="reset">Сlear</button>
-      </form>
+          <label>
+            <input class="filter__input" type="text" placeholder="Search" minlength="2">
+          </label>
+          <button class="filter__button" type="reset">Сlear</button>
+        </form>
       </div>
 
     </header>
